# indic-bpe-tokenizer

./: .gitignore  Experiment_Miletsones.md  pyproject.toml  requirements.txt
scripts/: build_hinglish_shard.py
src/indic_bpe_tokenizer/: benchmark_suite.py  config.py  corpus_loader.py  corpus_quality.py  evaluate_tokenizer.py  extract_corpus.py  normalize_text.py  tokenizer_adapters.py  train_tokenizer.py
tests/: test_corpus_loader.py  test_normalize_text.py  test_tokenizer_roundtrip.py
